API CRUD question and answer
